# cpp_template

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
clis/: CMakeLists.txt  main.cpp
cmake/: utilities.cmake
tests/: CMakeLists.txt  testing.cmake  vector_algebra_utils_tests.cpp
utilities/: CMakeLists.txt  cgal_typedefs.h  vector_algebra_utils.cpp  vector_algebra_utils.h
